--- a/Tareas-hacer/package.json
+++ b/Tareas-hacer/package.json
@@ -9,6 +9,7 @@
   "author": "Lucas Conde",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "inquirer": "^8.2.0"
   }
 }
