--- a/WebServer/package.json
+++ b/WebServer/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js" ,
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lucas Conde",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.2.0",
     "nodemon": "^2.0.15"
