--- a/RestServer/.env
+++ b/RestServer/.env
@@ -1,1 +1,5 @@
 PORT = 3000
+MONGODB_CNN = mongodb+srv://user_admin:lx8oX4u30fTSKx1N@clustercafe.h0lq0.mongodb.net/cafedb
+
+USER = user_admin
+PASSWORD = lx8oX4u30fTSKx1N
