--- a/RestServer/.env
+++ b/RestServer/.env
@@ -3,3 +3,5 @@ MONGODB_CNN = mongodb+srv://user_admin:lx8oX4u30fTSKx1N@clustercafe.h0lq0.mongod
 
 USER = user_admin
 PASSWORD = lx8oX4u30fTSKx1N
+
+SECRETORPRIVATEKEY = estaesmipublicprivatekey123xd!
