subir/actualizar/borrar archivos

--- a/RestServer/package.json
+++ b/RestServer/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.13.0",
     "google-auth-library": "^7.10.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "uuid": "^8.3.2"
   }
 }
